@@ -30,7 +30,6 @@
 # define _POSIX_SOURCE
 #endif
 #include "libioP.h"
-#if _IO_HAVE_SYS_WAIT
 #include <signal.h>
 #include <unistd.h>
 #include <stdlib.h>
@@ -48,8 +47,6 @@
 #endif
 extern _IO_pid_t _IO_fork (void) __THROW;
 #endif
-
-#endif /* _IO_HAVE_SYS_WAIT */
 
 #include <shlib-compat.h>
 #if SHLIB_COMPAT (libc, GLIBC_2_0, GLIBC_2_1)
@@ -123,7 +120,6 @@ _IO_old_proc_open (fp, command, mode)
      const char *command;
      const char *mode;
 {
-#if _IO_HAVE_SYS_WAIT
   volatile int read_or_write;
   volatile int parent_end, child_end;
   int pipe_fds[2];
@@ -194,9 +190,6 @@ _IO_old_proc_open (fp, command, mode)
 
   _IO_mask_flags (fp, read_or_write, _IO_NO_READS|_IO_NO_WRITES);
   return fp;
-#else /* !_IO_HAVE_SYS_WAIT */
-  return NULL;
-#endif
 }
 
 _IO_FILE *
@@ -240,7 +233,6 @@ _IO_old_proc_close (fp)
      _IO_FILE *fp;
 {
   /* This is not name-space clean. FIXME! */
-#if _IO_HAVE_SYS_WAIT
   int wstatus;
   _IO_proc_file **ptr = &old_proc_file_chain;
   _IO_pid_t wait_pid;
@@ -279,9 +271,6 @@ _IO_old_proc_close (fp)
   if (wait_pid == -1)
     return -1;
   return wstatus;
-#else /* !_IO_HAVE_SYS_WAIT */
-  return -1;
-#endif
 }
 
 const struct _IO_jump_t _IO_old_proc_jumps = {
